force-app/main/default/objects/Strategic_Business_Analysis__c/Strategic_Business_Analysis__c.object-meta.xml
<CustomObject>
    <description>Child object to the Client Success Manager Object. Used to store analysis of the clients.</description>
    <label>Strategic Business Analysis</label>
    <nameField>
        <displayFormat>Analysis-{000}</displayFormat>
        <label>Strategic Business Analysis</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Strategic Business Analysis</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>