force-app/main/default/objects/Strategic_Business_Analysis__c/fields/CQ10_How_do_you_ensure_competitive__c.field-meta.xml
<CustomField>
    <fullName>CQ10_How_do_you_ensure_competitive__c</fullName>
    <description>How do you ensure you are staying competitive?</description>
    <inlineHelpText>How do you ensure you are staying competitive?</inlineHelpText>
    <label>How do you ensure you are competitive?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Compensation surveys</fullName>
            </value>
            <value>
                <fullName>Job descriptions</fullName>
            </value>
            <value>
                <fullName>Job applicant requests/feedback</fullName>
            </value>
            <value>
                <fullName>Employee feedback</fullName>
            </value>
            <value>
                <fullName>Industry feedback</fullName>
            </value>
            <value>
                <fullName>Professional organizations</fullName>
            </value>
            <value>
                <fullName>Exit interviews</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>