force-app/main/default/objects/Strategic_Business_Analysis__c/fields/CQ17_Notes_on_Exec_Compensation_Strategy__c.field-meta.xml
<CustomField>
    <fullName>CQ17_Notes_on_Exec_Compensation_Strategy__c</fullName>
    <description>What is included?</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>What is included? (Stock options, Profit sharing, Executive bonus plan, Additional fringe benefits (ex. health insurance paid, additional paid time off, company car)</inlineHelpText>
    <label>Notes on Exec Compensation Strategy:</label>
    <length>16000</length>
    <type>LongTextArea</type>
</CustomField>