force-app/main/default/objects/Strategic_Business_Analysis__c/fields/CQ7_Allow_teams_to_create_progs__c.field-meta.xml
<CustomField>
    <fullName>CQ7_Allow_teams_to_create_progs__c</fullName>
    <description>Do you allow for individual teams to create their own recognition and reward programs?</description>
    <inlineHelpText>Do you allow for individual teams to create their own recognition and reward programs?</inlineHelpText>
    <label>Allow teams to create rec/reward progs?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>