force-app/main/default/objects/Strategic_Business_Analysis__c/fields/EDQ4_1_Notes_on_what_they_need__c.field-meta.xml
<CustomField>
    <fullName>EDQ4_1_Notes_on_what_they_need__c</fullName>
    <description>Do you know what they need?</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Do you know what they need?</inlineHelpText>
    <label>Notes on what they need:</label>
    <length>16000</length>
    <type>LongTextArea</type>
</CustomField>