force-app/main/default/objects/Strategic_Business_Analysis__c/fields/EDQ4_If_No_why_not__c.field-meta.xml
<CustomField>
    <fullName>EDQ4_If_No_why_not__c</fullName>
    <description>If no, why not?</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>If no, why not?</inlineHelpText>
    <label>If no, why not?</label>
    <length>16000</length>
    <type>LongTextArea</type>
</CustomField>