force-app/main/default/objects/Strategic_Business_Analysis__c/fields/EEQ8_If_no_why__c.field-meta.xml
<CustomField>
    <fullName>EEQ8_If_no_why__c</fullName>
    <description>Have you ever conducted an employee engagement or cultural values survey?   
If no, why?</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Have you ever conducted an employee engagement or cultural values survey?   
If no, why?</inlineHelpText>
    <label>If no, why?</label>
    <length>16000</length>
    <type>LongTextArea</type>
</CustomField>