force-app/main/default/objects/Strategic_Business_Analysis__c/fields/ERQ10_Track_employee_retention_trends__c.field-meta.xml
<CustomField>
    <fullName>ERQ10_Track_employee_retention_trends__c</fullName>
    <description>Do you track trends in employee retention with in your company?</description>
    <inlineHelpText>Do you track trends in employee retention with in your company?</inlineHelpText>
    <label>Track company employee retention trends?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>