force-app/main/default/objects/Strategic_Business_Analysis__c/fields/ERQ11_Notes_retention_tracking_methods__c.field-meta.xml
<CustomField>
    <fullName>ERQ11_Notes_retention_tracking_methods__c</fullName>
    <description>How do you track trends?</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>How do you track trends?</inlineHelpText>
    <label>Notes on retention tracking methods:</label>
    <length>16000</length>
    <type>LongTextArea</type>
</CustomField>