force-app/main/default/objects/Strategic_Business_Analysis__c/fields/ERQ12_What_have_you_done_with_results__c.field-meta.xml
<CustomField>
    <fullName>ERQ12_What_have_you_done_with_results__c</fullName>
    <description>What have you done with the results of your findings?</description>
    <inlineHelpText>What have you done with the results of your findings? Select all that apply.</inlineHelpText>
    <label>What have you done with the results?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Nothing</fullName>
            </value>
            <value>
                <fullName>Compiled data into a report</fullName>
            </value>
            <value>
                <fullName>Used data to address areas of concern</fullName>
            </value>
            <value>
                <fullName>Spoken to employees about their concerns</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>