force-app/main/default/objects/Strategic_Business_Analysis__c/fields/ERQ2_1_Need_more_awareness_of_practices__c.field-meta.xml
<CustomField>
    <fullName>ERQ2_1_Need_more_awareness_of_practices__c</fullName>
    <description>Could you benefit from a greater awareness of these practices?</description>
    <inlineHelpText>Could you benefit from a greater awareness of these practices?</inlineHelpText>
    <label>Need more awareness of these practices?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>