force-app/main/default/objects/Strategic_Business_Analysis__c/fields/ERQ5_Notes_on_good_employee_demands_work__c.field-meta.xml
<CustomField>
    <fullName>ERQ5_Notes_on_good_employee_demands_work__c</fullName>
    <description>Do you feel that you sometimes put more responsibility/work on good employees?</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Do you feel that you sometimes put more responsibility/work on good employees?</inlineHelpText>
    <label>Notes on good employee demands/work:</label>
    <length>16000</length>
    <type>LongTextArea</type>
</CustomField>