force-app/main/default/objects/Strategic_Business_Analysis__c/fields/LQ15_Notes_on_adapt_to_changes__c.field-meta.xml
<CustomField>
    <fullName>LQ15_Notes_on_adapt_to_changes__c</fullName>
    <description>Adapt strategies, goals, and plans to changing conditions?</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Adapt strategies, goals, and plans to changing conditions?</inlineHelpText>
    <label>Notes on adapt to changes</label>
    <length>16000</length>
    <type>LongTextArea</type>
</CustomField>