force-app/main/default/objects/Strategic_Business_Analysis__c/fields/LQ19_Currently_confront_issues__c.field-meta.xml
<CustomField>
    <fullName>LQ19_Currently_confront_issues__c</fullName>
    <description>Currently in your company, do your leaders: Confront issues that are limiting team effectiveness?</description>
    <inlineHelpText>Currently in your company, do your leaders: Confront issues that are limiting team effectiveness?</inlineHelpText>
    <label>Currently in your company?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>