force-app/main/default/objects/Strategic_Business_Analysis__c/fields/LQ19_Notes_on_confronting_issues__c.field-meta.xml
<CustomField>
    <fullName>LQ19_Notes_on_confronting_issues__c</fullName>
    <description>Confront issues that are limiting team effectiveness?</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Confront issues that are limiting team effectiveness?</inlineHelpText>
    <label>Notes on confronting issues:</label>
    <length>16000</length>
    <type>LongTextArea</type>
</CustomField>