force-app/main/default/objects/Strategic_Business_Analysis__c/fields/LQ1_Notes_leadership_development_program__c.field-meta.xml
<CustomField>
    <fullName>LQ1_Notes_leadership_development_program__c</fullName>
    <description>Do you have a formal leadership development program?</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Do you have a formal leadership development program?</inlineHelpText>
    <label>Notes on leadership development program:</label>
    <length>16000</length>
    <type>LongTextArea</type>
</CustomField>