force-app/main/default/objects/Strategic_Business_Analysis__c/fields/LQ22_Notes_on_communicate_clearly__c.field-meta.xml
<CustomField>
    <fullName>LQ22_Notes_on_communicate_clearly__c</fullName>
    <description>Communicate clear performance expectations to others?</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Communicate clear performance expectations to others?</inlineHelpText>
    <label>Notes on communicate clearly:</label>
    <length>16000</length>
    <type>LongTextArea</type>
</CustomField>