force-app/main/default/objects/Strategic_Business_Analysis__c/fields/LQ23_Currently_provide_proper_tools__c.field-meta.xml
<CustomField>
    <fullName>LQ23_Currently_provide_proper_tools__c</fullName>
    <description>Currently in your company, do your leaders: Provide people with the proper tools and resources to effectively do their jobs?</description>
    <inlineHelpText>Currently in your company, do your leaders: Provide people with the proper tools and resources to effectively do their jobs?</inlineHelpText>
    <label>Currently in your company?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>