force-app/main/default/objects/Strategic_Business_Analysis__c/fields/LQ2_If_Yes_describe_the_formal_way__c.field-meta.xml
<CustomField>
    <fullName>LQ2_If_Yes_describe_the_formal_way__c</fullName>
    <description>Do you have a formal way to identify high-potential employees? If yes, describe.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Do you have a formal way to identify high-potential employees? If yes, describe.</inlineHelpText>
    <label>If yes, describe (formal, informal, etc)</label>
    <length>16000</length>
    <type>LongTextArea</type>
</CustomField>