force-app/main/default/objects/Strategic_Business_Analysis__c/fields/LQ4_Notes_on_leader_own_of_decisions__c.field-meta.xml
<CustomField>
    <fullName>LQ4_Notes_on_leader_own_of_decisions__c</fullName>
    <description>Take ownership for decisions made and the outcome of those decisions?</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Take ownership for decisions made and the outcome of those decisions?</inlineHelpText>
    <label>Notes on leader ownership of decisions:</label>
    <length>16000</length>
    <type>LongTextArea</type>
</CustomField>