force-app/main/default/objects/Strategic_Business_Analysis__c/fields/LQ5_Notes_on_balance_of_comm_tools__c.field-meta.xml
<CustomField>
    <fullName>LQ5_Notes_on_balance_of_comm_tools__c</fullName>
    <description>Use a good balance of communication tools (e.g., staff meetings, memos, E-mail, meeting minutes, etc?) to communicate to others?</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Use a good balance of communication tools (e.g., staff meetings, memos, E-mail, meeting minutes, etc?) to communicate to others?</inlineHelpText>
    <label>Notes on balance of comm tools:</label>
    <length>16000</length>
    <type>LongTextArea</type>
</CustomField>