force-app/main/default/objects/Strategic_Business_Analysis__c/fields/Notes_on_Plan_Development_Process__c.field-meta.xml
<CustomField>
    <fullName>Notes_on_Plan_Development_Process__c</fullName>
    <description>If yes, what is the process for developing those plans?</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>If yes, what is the process for developing those plans?</inlineHelpText>
    <label>Notes on Plan Development Process:</label>
    <length>16000</length>
    <type>LongTextArea</type>
</CustomField>