force-app/main/default/objects/Strategic_Business_Analysis__c/fields/OCQ13_Notes_on_how_you_communicated_it__c.field-meta.xml
<CustomField>
    <fullName>OCQ13_Notes_on_how_you_communicated_it__c</fullName>
    <description>How have you communicated it?</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>How have you communicated it?</inlineHelpText>
    <label>Notes on how you communicated it:</label>
    <length>16000</length>
    <type>LongTextArea</type>
</CustomField>