force-app/main/default/objects/Strategic_Business_Analysis__c/fields/OCQ6_If_Yes_how_have_aided_understanding__c.field-meta.xml
<CustomField>
    <fullName>OCQ6_If_Yes_how_have_aided_understanding__c</fullName>
    <description>If yes, how have you helped them to understand it?</description>
    <inlineHelpText>If yes, how have you helped them to understand it?</inlineHelpText>
    <label>If yes,how have you aided understanding?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Company meeting</fullName>
            </value>
            <value>
                <fullName>Department meeting</fullName>
            </value>
            <value>
                <fullName>One-on-one</fullName>
            </value>
            <value>
                <fullName>In-office posting</fullName>
            </value>
            <value>
                <fullName>E-mail communication</fullName>
            </value>
            <value>
                <fullName>Informal communication</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>