force-app/main/default/objects/Strategic_Business_Analysis__c/fields/OCQ6_Notes_employees_and_business_plan__c.field-meta.xml
<CustomField>
    <fullName>OCQ6_Notes_employees_and_business_plan__c</fullName>
    <description>Do employees understand the business plan and how their role impacts the overall success of the business?</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Do employees understand the business plan and how their role impacts the overall success of the business?</inlineHelpText>
    <label>Notes on employees and business plan:</label>
    <length>16000</length>
    <type>LongTextArea</type>
</CustomField>