force-app/main/default/objects/Strategic_Business_Analysis__c/fields/OCQ8_Notes_on_department_understanding__c.field-meta.xml
<CustomField>
    <fullName>OCQ8_Notes_on_department_understanding__c</fullName>
    <description>Does each department understand their own projects/initiatives/goals?</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Does each department understand their own projects/initiatives/goals?</inlineHelpText>
    <label>Notes on department understanding:</label>
    <length>16000</length>
    <type>LongTextArea</type>
</CustomField>