force-app/main/default/objects/Strategic_Business_Analysis__c/fields/OCQ9_Notes_on_Inter_departmental_Comm__c.field-meta.xml
<CustomField>
    <fullName>OCQ9_Notes_on_Inter_departmental_Comm__c</fullName>
    <description>How does each department know what projects/initiative/goals the other departments are working on?</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>How does each department know what projects/initiative/goals the other departments are working on?</inlineHelpText>
    <label>Notes on Inter-departmental Comm:</label>
    <length>16000</length>
    <type>LongTextArea</type>
</CustomField>