force-app/main/default/objects/Strategic_Business_Analysis__c/fields/OQ1_What_keeps_you_awake_at_night__c.field-meta.xml
<CustomField>
    <fullName>OQ1_What_keeps_you_awake_at_night__c</fullName>
    <description>Use this as the opening question to determine where to go next with assessment:
What keeps you awake at night?</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>What keeps you awake at night?</inlineHelpText>
    <label>What keeps you awake at night?</label>
    <length>16000</length>
    <type>LongTextArea</type>
</CustomField>