force-app/main/default/objects/Strategic_Business_Analysis__c/recordTypes/Strategic_TBusiness_Analysis_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>Strategic_TBusiness_Analysis_Record_Type</fullName>
    <active>true</active>
    <description>Record type for the Strategic Business Analysis Object</description>
    <label>Strategic Business Analysis Record Type</label>
</RecordType>